# patchcore

./: .gitignore  README.md  pyproject.toml
environments/: docker-compose.yml
outputs/: embedding.pickle
scripts/: crop_target_images.py  split_images.py
src/: dataset.py  main.py  model.py  plot_utils.py  sampler.py
