[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["gengen"]
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py$'
skip-string-normalization = true
exclude = '''
(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "*/migrations/*.py"
